<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bookingSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/courtBooking"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/textViewBookID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookingSummary" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:text="@string/date"
        app:layout_constraintStart_toEndOf="@+id/textViewBookID"
        app:layout_constraintTop_toTopOf="@+id/textViewBookID" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@+id/textViewBookID"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookID" />

    <TextView
        android:id="@+id/textViewBookedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bookedDate"
        app:layout_constraintStart_toStartOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewBookedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bookedTime"
        app:layout_constraintStart_toStartOf="@+id/textViewDate"
        app:layout_constraintTop_toTopOf="@+id/textViewBookedDate" />

    <TextView
        android:id="@+id/textViewBookedCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="@+id/textViewBookedDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookedDate" />

    <TextView
        android:id="@+id/textViewCourt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/court"
        app:layout_constraintStart_toStartOf="@+id/textViewBookedCategory"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookedCategory" />

    <TextView
        android:id="@+id/textViewType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/type"
        app:layout_constraintStart_toStartOf="@+id/textViewCourt"
        app:layout_constraintTop_toBottomOf="@+id/textViewCourt" />

    <TextView
        android:id="@+id/textViewCharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/charge"
        app:layout_constraintStart_toStartOf="@+id/textViewType"
        app:layout_constraintTop_toBottomOf="@+id/textViewType" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btnBack"
        app:layout_constraintStart_toStartOf="@+id/textViewCharge"
        app:layout_constraintTop_toBottomOf="@+id/textViewCharge" />

    <Button
        android:id="@+id/buttonPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnPayment"
        app:layout_constraintStart_toEndOf="@+id/buttonBack"
        app:layout_constraintTop_toBottomOf="@+id/textViewCharge" />
    <!--
        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courtSummary"
            app:layout_constraintVertical_bias="0.0">

        </androidx.cardview.widget.CardView> -->
</androidx.constraintlayout.widget.ConstraintLayout>